--- a/hive_pj/pubspec.yaml
+++ b/hive_pj/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_annotation: ^4.8.1
   shared_preferences: ^2.1.2
   connectivity_plus: ^4.0.1
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
